blinkenlights fix menu on mobile finally

--- a/style-about.css
+++ b/style-about.css
@@ -1,11 +1,9 @@
-nav, details {
-	position: fixed;
-	top: 0;
-	right: 0;
-}
-
 hr {
 	width: 20rem;
+}
+
+.about-img {
+	width: 90vw !important;
 }
 
 #about {
@@ -37,39 +35,30 @@ hr {
 			left: -2rem !important;
 			position: relative !important;
 		}
+	ul {
+		padding: 3rem 0 0 0;
+		margin: 0;
+		li {
+			font-size: 2rem;
+			a {
+				background: none;
+				color: var(--black) !important;
+			}
+		}
+	}
 	}
 	section.cta {
 		max-width: 1200px;
 		padding: 7rem 1.5rem;
 		margin: 10rem auto;
 	}
-	ul {
-		padding: 0;
-		margin: 0;
-		li {
-			font-size: 2rem;
-			margin: 1rem 0;
-		}
-	}
 }
 
 #nav-details {
 	&::after {
 		filter: invert(1);
-		top: 0;
-		right: 0;
+	}
+	@media (max-width: 768px) {
+		top: 1.9rem;
 	}
 }
-
-#nav-details {
-	position: fixed;
-	top: 2rem;
-	right: 2rem;
-}
-
-
-nav {
-	top: 5rem;
-	right: .5rem;
-}
-
