--- a/style-index.css
+++ b/style-index.css
@@ -54,7 +54,6 @@ header {
 #nav-details {
 	z-index: 200;
 	top: 1.9rem;
-	right: 2rem;
 	position: fixed;
 	&::after {
 		z-index: 200;
